--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_APP_BACK_END_BASE_URL=https://ta-pm-sailsjs.herokuapp.com/
+REACT_APP_FRONT_END_BASE_URL=https://ta-pm-reactjs.herokuapp.com/
 REACT_APP_BACK_END_BASE_URL_LOCAL=http://localhost:1337/
 
 REACT_APP_GOOGLE_DRIVE_API_KEY=AIzaSyBjzbQ5oGTGbzTY-iE4AsnwhrTgoyUjEJk
