Fix GanttChart and adding new features (LineChart,TeamList, ...)

--- a/package.json
+++ b/package.json
@@ -20,30 +20,39 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^5.0.0-alpha.20",
     "@material-ui/pickers": "^3.2.10",
+    "@syncfusion/ej2-react-gantt": "^19.1.66",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "@zoomus/websdk": "^1.9.1",
     "axios": "^0.21.1",
+    "chart.js": "^3.3.2",
+    "chartjs-adapter-date-fns": "^1.1.0-beta.1",
+    "chartjs-adapter-moment": "^1.0.0",
     "d3": "^3.5.17",
-    "date-fns": "^2.0.0-beta.5",
+    "date-fns": "^2.22.1",
     "fontsource-roboto": "^3.0.3",
     "gantt-schedule-timeline-calendar": "^3.3.4",
     "gapi-script": "^1.0.2",
+    "hammerjs": "^2.0.8",
     "ibm-gantt-chart-react": "^0.5.14",
     "material-ui-dropzone": "^3.5.0",
     "moment": "^2.29.1",
     "notistack": "^1.0.4-alpha.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-color": "^2.19.3",
     "react-data-grid": "^5.0.1",
+    "react-data-table-component": "^6.11.7",
     "react-dom": "^17.0.2",
     "react-drive": "^1.0.1",
+    "react-gantt-elastic": "^1.0.1",
     "react-github-login": "^1.0.3",
     "react-google-calendar-api": "^1.3.1",
     "react-google-login": "^5.1.22",
     "react-google-picker": "^0.1.0",
     "react-login-github": "^1.0.7",
+    "react-milestone": "^2.0.2",
     "react-number-format": "^4.4.1",
     "react-oauth-flow": "^1.2.0",
     "react-router-dom": "^5.2.0",
@@ -53,6 +62,7 @@
     "react-vertical-timeline-component": "^3.3.1",
     "socket.io": "^3.0.3",
     "socket.io-client": "^3.1.0",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
